@@ -1,0 +1,6 @@
+$NetBSD: distinfo,v 1.1 2019/08/09 18:39:07 brook Exp $
+
+SHA1 (R/testthat_2.2.1.tar.gz) = b15f814ea9a5a57192232649d73ef9bb6544d442
+RMD160 (R/testthat_2.2.1.tar.gz) = 6e7879813155c5ae557869a568726c74c945b3ce
+SHA512 (R/testthat_2.2.1.tar.gz) = 0d3a4f5b21907b83f8ed56e8b9b54cf16061fa6b102f9b559956f554a2894d704a4d35e44fa7c7b194817750656e2f1a2e909fb4111a2fa68a6324cc271589e4
+Size (R/testthat_2.2.1.tar.gz) = 235874 bytes
